cmake_minimum_required(VERSION 3.10) 
# Especifica la versión mínima requerida de CMake para este proyecto. 
# En este caso, se requiere al menos la versión 3.10.

project(Proyecto) 
# Define el nombre del proyecto como "Proyecto".

add_subdirectory(LeetCode) 
# Agrega el subdirectorio "LeetCode" al proyecto. 

add_subdirectory(Parcial1) 
# Agrega el subdirectorio "Parcial1" al proyecto.

add_subdirectory(Tarea1) 
# Agrega el subdirectorio "Tarea1" al proyecto.

add_subdirectory(Tarea2) 
# Agrega el subdirectorio "Tarea2" al proyecto.

add_subdirectory(Tarea3) 
# Agrega el subdirectorio "Tarea3" al proyecto.

add_subdirectory(ClasePoint2d) 
# Agrega el subdirectorio "ClasePoint2d" al proyecto. 

add_subdirectory(EjercicioUML) 
# Agrega el subdirectorio "EjercicioUML" al proyecto. 
