cmake_minimum_required(VERSION 3.10)
# Especifica la versión mínima requerida de CMake para este subproyecto. 
# En este caso, se requiere al menos la versión 3.10.

project(Parcial1)
# Define el nombre del subproyecto como "Parcial1".

add_executable(Parcial4 Parcial4.cpp)
# Crea un ejecutable llamado "Parcial4" a partir del archivo fuente "Parcial4.cpp".