cmake_minimum_required(VERSION 3.10)
# Especifica la versión mínima requerida de CMake para este subproyecto. 
# En este caso, se requiere al menos la versión 3.10.

project(Tarea1)
# Define el nombre del subproyecto como "Tarea1".

add_executable(Ejercicio2 Ejercicio2.cpp)
# Crea un ejecutable llamado "Ejercicio2" a partir del archivo fuente "Ejercicio2.cpp".

add_executable(Ejercicio4 Ejercicio4.cpp)
# Crea un ejecutable llamado "Ejercicio4" a partir del archivo fuente "Ejercicio4.cpp".

add_executable(Ejercicio9 Ejercicio9.cpp)
# Crea un ejecutable llamado "Ejercicio9" a partir del archivo fuente "Ejercicio9.cpp".

add_executable(Ejercicio1 Ejercicio1.cpp)
# Crea un ejecutable llamado "Ejercicio1" a partir del archivo fuente "Ejercicio1.cpp".