cmake_minimum_required(VERSION 3.10)
# Especifica la versión mínima requerida de CMake para este subproyecto. 
# En este caso, se requiere al menos la versión 3.10.

project(Tarea2)
# Define el nombre del subproyecto como "Tarea2".

add_executable(Ejercicio1 Ejercicio1.cpp)
# Crea un ejecutable llamado "Ejercicio1" a partir del archivo fuente "Ejercicio1.cpp".