cmake_minimum_required(VERSION 3.10)
# Especifica la versión mínima requerida de CMake para este subproyecto. 
# En este caso, se requiere al menos la versión 3.10.

project(Tarea3)
# Define el nombre del subproyecto como "Tarea3".

add_executable(Calculadora Calculadora.cpp)
# Crea un ejecutable llamado "Calculadora" a partir del archivo fuente "Calculadora.cpp".