cmake_minimum_required(VERSION 3.10)
# Especifica la versión mínima requerida de CMake para este subproyecto. 
# En este caso, se requiere al menos la versión 3.10.

project(TareaSTL)
# Define el nombre del subproyecto como "TareaSTL".

add_executable(ejemploSTL ejemploSTL.cpp)
# Crea un ejecutable llamado "ejemploSTL" a partir del archivo fuente "ejemploSTL.cpp".